# metaai-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_SERVER_DEPLOYMENT.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_AND_COOKIES.md  CONTRIBUTING.md  Dockerfile  GENERATION_API.md  IMAGE_UPLOAD_README.md  LICENSE  QUICK_REFERENCE.md  QUICK_START.md  QUICK_USAGE.md  README.md  SECURITY.md  VIDEO_GENERATION_README.md  chat_conversation_test_results.json  chat_conversation_test_results_scripted_check.json  comprehensive_feature_test.py  comprehensive_test_suite.py  create_generation_api.py  dev_tests  docker-compose.yml  example_generation.py  extract_access_token.py  final_comprehensive_test.py  pyproject.toml  real_world_test.py  requirements.txt  server.py  setup.cfg  setup.py  start.bat  start.sh  test.py  test_access_token_fix.py  test_all_generation.py  (+9 more)
.github/: README.md
.github/workflows/: ci.yml  publish.yml  python-publish.yml
examples/: complete_workflow_example.py  image_upload_example.py  image_workflow_complete.py  manual_token_example.py  practical_use_cases.py  simple_example.py  test_example.py  video_generation.py
generation_api/: README.md  __init__.py  api_patterns.json  image_generation.py  video_generation.py
scripts/: test_all_features_complete.py  test_chat_conversation.py  test_chat_feature.py  test_upload_and_generation.py  test_uvicorn.py
src/metaai_api/: __init__.py  api_server.py  client.py  generation.py  html_scraper.py  image_upload.py  main.py  utils.py  video_generation.py  video_generation_new.py
test/: test_network_patterns.py
