[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metaai-api"
version = "2.0.0"
description = "Feature-rich Python SDK for Meta AI - Chat, Image & Video Generation powered by Llama 3"
authors = [{name = "Meta AI SDK Team", email = "contact@meta-ai-sdk.dev"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["metaai", "meta-ai", "llama3", "ai", "llm", "video-generation", "chatbot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/mir-ashiq/meta-ai-python"
Documentation = "https://github.com/mir-ashiq/meta-ai-python/blob/main/README.md"
Repository = "https://github.com/mir-ashiq/meta-ai-python"
Changelog = "https://github.com/mir-ashiq/meta-ai-python/blob/main/CHANGELOG.md"

[tool.poetry]
name = "metaai-api"
version = "2.0.0"
description = "Feature-rich Python SDK for Meta AI powered by Llama 3"
authors = ["Meta AI SDK Team <contact@meta-ai-sdk.dev>"]

[project.dependencies]
requests = ">=2.31.0"
requests-html = ">=0.10.0"
lxml-html-clean = ">=0.1.1"
beautifulsoup4 = ">=4.9.0"

[project.optional-dependencies]
api = [
    "fastapi>=0.95.2,<0.96.0",
    "uvicorn[standard]>=0.22.0,<0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
dev = [
    "check-manifest",
    "pytest",
    "black",
    "flake8",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.31.0"
requests-html = "0.10.0"
lxml-html-clean = "0.1.1"
bs4 = "0.0.2"

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "python-multipart", "python-dotenv"]

[build]
script = "build.py"